<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Activites.MainActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />


    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:openDrawer="start">

       <FrameLayout
           android:id="@+id/container"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>


        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            style="@style/DrawerArrowStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            app:elevation="8dp"
            app:headerLayout="@layout/header_layout"
            app:itemTextColor="@color/colorAccent"
            app:itemIconTint="@color/colorAccent"
            app:menu="@menu/nav_menu"/>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>