<resources>
    <string name="app_name">Rosanne</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="fav">Favorite</string>
    <string name="orders">Orders</string>
...
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="loginSuccess">login successed</string>
    <string name="loginFail">login failed</string>
    <string name="registerSuccess">success</string>
    <string name="registerFail">register failed</string>
    <string name="addToFav">add to Favorite</string>
    <string name="quantity">Quantity :</string>
    <string name="peice">Peice</string>
    <string name="selectTime">Select Time</string>
    <string name="confirmOrder">order confirmtion</string>
    <string name="orderDialogMessage">Are you sure to complete order?</string>
    <string name="confirm">Yes,sure</string>
...
