...
                    android:text="@string/quantity"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                    android:id="@+id/pro_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:backGroundColor="@color/colorPrimary"
                    app:initialNumber="1"
                    app:textColor="@color/white" />
...
                android:layout_weight="1"
                android:background="@drawable/btn_back"
                android:text="@string/addToCart"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/addTofavDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_white"
...
