<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/catagory_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_alignParentStart="true"
            android:fontFamily="cursive"
            android:layout_marginStart="10dp"
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/products_recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>